# Assign3

./: HW3_TestLog.xlsx  TriangleValidator-Design.vpp
Triangles/: CMakeLists.txt  Edge.cpp  Edge.hpp  Point.cpp  Triangle.cpp  Triangle.hpp  Utils.cpp  main.cpp
Triangles/Testing/: EdgeTester.cpp  EdgeTester.hpp  PointTester.cpp  TriangleTester.cpp  UtilsTester.cpp  testMain.cpp
